--- a/docs/styles.css
+++ b/docs/styles.css
@@ -327,6 +327,7 @@ html {
 .page {
   display: flex;
   flex-direction: column;
+  min-width: 360px;
 }
 .page__block {
   position: relative;
@@ -499,6 +500,7 @@ html {
   color: #FFF;
 }
 .block-main__header {
+  width: 600px;
   margin-bottom: 35px;
   font-size: 92px;
   font-style: normal;
@@ -506,7 +508,6 @@ html {
   letter-spacing: -1.84px;
   line-height: 90%;
   /* 82.8px */
-  width: 600px;
 }
 @media screen and (max-width: 1023px) {
   .block-main__header {
@@ -525,10 +526,10 @@ html {
 }
 @media screen and (max-width: 1023px) {
   .block-main__counter {
+    box-sizing: border-box;
     padding: 60px 0 70px 170px;
     flex-direction: column;
-    width: 150px;
-    max-width: calc(100% - 230px);
+    max-width: 360px;
   }
 }
 .block-main__counter__count-wrapper {
