--- a/src/components/block-main/index.less
+++ b/src/components/block-main/index.less
@@ -29,10 +29,10 @@
     gap: 30px;
 
     .mobile-screen({
+      box-sizing: border-box;
       padding: 60px 0 70px 170px;
       flex-direction: column;
-      width: 150px;
-      max-width: calc(100% - 230px);
+      max-width: 360px;
     });
 
     &__count-wrapper {
