--- a/src/components/block-reviews/index.less
+++ b/src/components/block-reviews/index.less
@@ -44,6 +44,10 @@
     overflow: hidden;
     flex-flow: row nowrap;
     gap: 10px;
+
+    .mobile-screen({
+      overflow-x: scroll;
+    });
   }
 
   &__card {
