--- a/src/components/block-video/index.less
+++ b/src/components/block-video/index.less
@@ -1,6 +1,8 @@
 .block-video {
   position: relative;
+  display: flex;
   overflow: hidden;
+  flex-direction: column;
 
   &__top {
     margin-bottom: 10px;
