--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -20,7 +20,7 @@
   transition: all 0.2s ease-in-out;
 
   &_scrolled {
-    min-height: 70px;
+    min-height: 75px;
     backdrop-filter: blur(5px);
     background: rgb(219 25 51 / 80%);
     transition: all 0.4s ease-in-out;
@@ -93,9 +93,9 @@
         left: 10px;
 
         &_scrolled {
-          top: 11px;
-          left: 84px;
-          width: 47px;
+          top: 14px;
+          left: 85px;
+          height: 47px;
         }
       });
     }
