--- a/src/components/list/index.less
+++ b/src/components/list/index.less
@@ -61,7 +61,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 21.6px */
-    transition: max-height 0.2s linear;
+    transition: max-height 1s ease-in;
 
     .mobile-screen({
       font-size: 14px;
@@ -76,7 +76,7 @@
     }
 
     &_opened {
-      max-height: 1000px;
+      max-height: 500px;
     }
   }
 }
