--- a/docs/styles.css
+++ b/docs/styles.css
@@ -916,6 +916,42 @@ html {
 .block-cases__card:hover .block-cases__card__info {
   background: linear-gradient(180deg, rgba(219, 25, 51, 0) 0%, rgba(219, 25, 51, 0.8) 100%);
 }
+.block-cases__modal {
+  display: flex;
+  color: #fff;
+  gap: 53px;
+}
+.block-cases__modal__image {
+  width: 409px;
+  height: 409px;
+  border-radius: 36px;
+  margin-bottom: 40px;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+.block-cases__modal__title {
+  font-family: HelveticaNeueCyr, sans-serif;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 90%;
+  letter-spacing: 0;
+  margin-bottom: 20px;
+}
+.block-cases__modal__text {
+  font-family: HelveticaNeueCyr-Light, sans-serif;
+  font-weight: 400;
+  font-size: 21.6px;
+  line-height: 90%;
+  letter-spacing: 0;
+}
+.block-cases__modal__description {
+  font-family: HelveticaNeueCyr-Light, sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: 0;
+}
 
 .block-teachers__top {
   display: flex;
@@ -1040,6 +1076,42 @@ html {
 .block-teachers__card__info {
   padding: 32px 36px 36px;
   color: #fff;
+}
+.block-teachers__modal {
+  display: flex;
+  color: #fff;
+  gap: 53px;
+}
+.block-teachers__modal__image {
+  width: 409px;
+  height: 409px;
+  border-radius: 36px;
+  margin-bottom: 40px;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+.block-teachers__modal__title {
+  font-family: HelveticaNeueCyr, sans-serif;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 90%;
+  letter-spacing: 0;
+  margin-bottom: 20px;
+}
+.block-teachers__modal__text {
+  font-family: HelveticaNeueCyr-Light, sans-serif;
+  font-weight: 400;
+  font-size: 21.6px;
+  line-height: 90%;
+  letter-spacing: 0;
+}
+.block-teachers__modal__description {
+  font-family: HelveticaNeueCyr-Light, sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: 0;
 }
 
 .block-tickets__top {
@@ -1803,5 +1875,36 @@ html {
 .header__link_lk {
   background: url(7354175774cc0e7d6529.svg) no-repeat;
   background-size: contain;
+}
+
+.modal {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  backdrop-filter: blur(10px);
+  display: flex;
+  align-items: center;
+}
+.modal__content {
+  position: relative;
+  width: 824px;
+  margin: 0 auto;
+}
+.modal__close {
+  position: absolute;
+  right: -88px;
+  top: -60px;
+  display: block;
+  width: 32px;
+  height: 32px;
+  background-image: url(48a0fe675971a840689e.svg);
+  background-size: cover;
+  cursor: pointer;
+}
+.modals_hidden {
+  display: none;
 }
 
