--- a/src/components/block-cases/index.less
+++ b/src/components/block-cases/index.less
@@ -114,4 +114,45 @@
       background: linear-gradient(180deg, rgb(219 25 51 / 0%) 0%, rgb(219 25 51 / 80%) 100%);
     }
   }
+
+  &__modal {
+    display: flex;
+    color: #fff;
+    gap: 53px;
+
+    &__image {
+      width: 409px;
+      height: 409px;
+      border-radius: 36px;
+      margin-bottom: 40px;
+      background-position: 50%;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    &__title {
+      margin-bottom: 20px;
+      font-family: HelveticaNeueCyr, sans-serif;
+      font-size: 48px;
+      font-weight: 900;
+      letter-spacing: 0;
+      line-height: 90%;
+    }
+
+    &__text {
+      font-family: HelveticaNeueCyr-Light, sans-serif;
+      font-size: 21.6px;
+      font-weight: 400;
+      letter-spacing: 0;
+      line-height: 90%;
+    }
+
+    &__description {
+      font-family: HelveticaNeueCyr-Light, sans-serif;
+      font-size: 24px;
+      font-weight: 400;
+      letter-spacing: 0;
+      line-height: 120%;
+    }
+  }
 }
