--- a/src/components/block-cases/index.less
+++ b/src/components/block-cases/index.less
@@ -66,6 +66,7 @@
     border-radius: 30px;
     background: lightgray 50% / cover no-repeat;
     background-size: cover;
+    cursor: pointer;
 
     .mobile-screen({
       width: 240px;
