--- a/src/components/block-teachers/index.less
+++ b/src/components/block-teachers/index.less
@@ -60,6 +60,7 @@
     width: 240px;
     min-width: 240px;
     border-radius: 30px;
+    cursor: pointer;
     transition: scale 0.3s ease-in-out;
 
     .mobile-screen({
