--- a/src/components/block-reviews/index.less
+++ b/src/components/block-reviews/index.less
@@ -59,5 +59,13 @@
     border-radius: 30px;
     background: lightgray 50% / cover no-repeat;
     background-size: cover;
+    cursor: pointer;
+  }
+
+  &__modal {
+    &__video {
+      overflow: hidden;
+      border-radius: 30px;
+    }
   }
 }
