--- a/src/components/horizontal-scroll/index.less
+++ b/src/components/horizontal-scroll/index.less
@@ -20,8 +20,9 @@
     height: 64px;
     padding: 20px;
     background-image: url("../../icons/down.svg");
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 64px;
     opacity: 0.5;
 
     .mobile-screen({
