--- a/src/components/modal/index.less
+++ b/src/components/modal/index.less
@@ -9,7 +9,7 @@
   align-items: center;
   backdrop-filter: blur(10px);
 
-  &__content {
+  &__dialog{
     position: relative;
     width: 824px;
     margin: 0 auto;
@@ -25,6 +25,35 @@
     background-image: url("../../icons/x.svg");
     background-size: cover;
     cursor: pointer;
+  }
+
+  &__control {
+    position: absolute;
+    z-index: 100;
+    top: calc(50% - 64px);
+    width: 64px;
+    height: 64px;
+    padding: 20px;
+    background-image: url("../../icons/down.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 64px;
+    cursor: pointer;
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &_right {
+      right: -96px;
+      transform: rotate(-90deg);
+    }
+
+    &_left {
+      left: -96px;
+      transform: rotate(90deg);
+    }
   }
 }
 
