--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1615,6 +1615,21 @@ html {
   text-align: center;
 }
 
+.bg-video {
+  top: -30vh;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  aspect-ratio: 1 / 1;
+  display: flex;
+}
+@media screen and (max-width: 1023px) {
+  .bg-video {
+    top: -42vh;
+  }
+}
+
 .list {
   display: flex;
   overflow: hidden;
