--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1433,6 +1433,11 @@ html {
   border-radius: 30px;
   background: lightgray 50% / cover no-repeat;
   background-size: cover;
+  cursor: pointer;
+}
+.block-video__modal__video {
+  overflow: hidden;
+  border-radius: 30px;
 }
 
 .footer {
@@ -1616,13 +1621,13 @@ html {
 }
 
 .bg-video {
-  top: -30vh;
   position: absolute;
   z-index: 1;
+  top: -30vh;
+  display: flex;
   width: 100%;
   height: 100vh;
   aspect-ratio: 1 / 1;
-  display: flex;
 }
 @media screen and (max-width: 1023px) {
   .bg-video {
