--- a/src/components/bg-video/index.less
+++ b/src/components/bg-video/index.less
@@ -3,13 +3,15 @@
 .bg-video {
   position: absolute;
   z-index: 1;
-  top: -30vh;
+  top: -55vh;
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 150vh;
   aspect-ratio: 1 / 1;
 
   .mobile-screen({
-    top: -42vh;
+    height: 130%;
+    top: -15%;
+    bottom: -15%;
   })
 }
