--- a/src/components/ticket/index.less
+++ b/src/components/ticket/index.less
@@ -5,10 +5,6 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  .mobile-screen({
-    width: 100%;
-  });
-
   &__link {
     display: flex;
     width: 347px;
@@ -29,6 +25,7 @@
     .mobile-screen({
       box-sizing: border-box;
       width: 100%;
+      max-width: 350px;
     });
   }
 
